[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "surfapp"
version = "0.1.0"
description = "surfapp utilizes pysurfline to create an app to help surfers"
readme = "README.rst"
authors = [
  {name = "Soren Nyholm Larsen", email = "iamsorenl@gmail.com"}
]
maintainers = [
  {name = "Soren Nyholm Larsen", email = "iamsorenl@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/iamsorenl/surfapp/issues"
changelog = "https://github.com/iamsorenl/surfapp/blob/master/changelog.md"
homepage = "https://github.com/iamsorenl/surfapp"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

